--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/thehig/CoffeeChai/issues"
   },
-  "homepage": "https://github.com/thehig/CoffeeChai#readme"
+  "homepage": "https://github.com/thehig/CoffeeChai#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "coffee-script": "^1.12.6",
+    "mocha": "^3.4.1"
+  }
 }
