--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "",
   "scripts": {
-    "test": "mocha  --bail --timeout 30000 --require coffee-script/register --compilers coffee:coffee-script/register specs/unit/helper.js specs/unit/*.coffee",
-    "test-debug": "mocha --debug-brk --bail --timeout 30000 --require coffee-script/register --compilers coffee:coffee-script/register specs/unit/helper.js specs/unit/*.coffee"
+    "test": "mocha  --bail --timeout 30000 --require coffee-script/register --compilers coffee:coffee-script/register specs/**/*.coffee",
+    "test-debug": "mocha --debug-brk --bail --timeout 30000 --require coffee-script/register --compilers coffee:coffee-script/register specs/**/*.coffee"
   },
   "repository": {
     "type": "git",
